--- a/style.css
+++ b/style.css
@@ -64,6 +64,14 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.btn:active {
+    box-shadow:2px 1px 2px 2px gray inset;
+    outline:none;
+}
+.btn:focus {
+    outline: none;
+}
+
 
 #btn-7{
     grid-column-start: 2;
